--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-test-renderer": "^16.8.4"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
